--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,11 @@
+html {
+    height: 100%;
+}
+
 body {
     width: 1162px;
     margin: 0 auto;
+    height: 100%;
 }
 
 .header {
@@ -16,7 +21,7 @@ body {
     width: 960px;
 }
 
-.header h2 {
+#about-link {
     color: white;
     height: 30px;
     width: 250px;
@@ -25,6 +30,9 @@ body {
     font-family: Georgia, Times, "Times New Roman", serif;
     padding: 20px 0px;
     margin: 0px;
+    text-decoration: none;
+    font-size: 1.5em;
+    font-weight: bold;
 }
 
 .navigation {
@@ -41,24 +49,28 @@ body {
     padding: 0px 10px;
 }
 
+.navigation > a:hover {
+    text-decoration: underline;
+}
+
 .border-right {
     border-right: 1px solid rgb(221, 221, 221);
 }
 
 .container {
     background-image: url("../images/concrete_seamless.png");
-    height: 600px;
-    padding-top: 38px;
+    min-height: 100%;
+    padding: 38px 0px 0px 0px;
+    box-sizing: border-box; 
+    margin-bottom: -50px; 
 }
 
 .about-me {
-    margin-top: 38px;
     background-color: #ffffff;
-    width: 900px;
-    height: 500px;
+    width: 898px;
     margin: 0 auto;
-    padding: 38px 30px;
-    
+    padding: 38px 30px 38px 38px;
+    border: 1px solid #dddddd;  
 }
 
 .about-me h2 {
@@ -76,16 +88,18 @@ body {
     text-shadow: 1px 1px 4px #777777;
 }
 
-.about-me img {
+#float {
     margin-top: 30px;
     margin-right: 30px;
-    float: left;   
+    float: left;
 }
 
 .text {
-   font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #777777;
     list-style-type:lower-greek;
+    line-height: 20px;
+    letter-spacing: 0.25px;
 }
 
 .text-p {
@@ -95,7 +109,12 @@ body {
 .text span {
     color: #4aaaa5;
     font-style: italic;
-    font-weight: 700;
+    font-weight: 500;
+    text-shadow: 1px 1px 2px #777777;
+}
+
+.text span:hover {
+    text-decoration: underline;
 }
 
 .about-me h3 + p, .about-me ol + h3 {
@@ -104,4 +123,22 @@ body {
 
 .about-me ol + h3 {
     margin-top: 25px;
+}
+
+.push {
+    height: 50px;
+}
+
+.footer {
+    height: 50px;
+    width: 100%;
+    background: #666666;
+    border-top: 8px solid #4aaaa5;
+    color: white;
+    text-align: center;
+}
+
+.footer p {
+    margin-top: 30px;
+    font-size: 12px;
 }
